[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nutstore-sync"
version = "2.0.0"
description = "鍧氭灉浜?WebDAV 鍚屾宸ュ叿 - 鍏嶆闈㈢锛岀函鏍囧噯搴撳疄鐜?
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "clawhub", email = "clawhub@example.com"},
]
keywords = ["webdav", "sync", "nutstore", "cloud-storage", "jianguoyun"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/clawhub/nutstore-sync"
Repository = "https://github.com/clawhub/nutstore-sync"
Issues = "https://github.com/clawhub/nutstore-sync/issues"
Changelog = "https://github.com/clawhub/nutstore-sync/blob/main/CHANGELOG.md"

[project.scripts]
nutstore-sync = "nutstore_sync:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = [
    "/nutstore_sync.py",
    "/README.md",
    "/LICENSE",
    "/SKILL.md",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/tests/",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

